==> Jay-Tech/GRBL_MPG_DRO_BoosterPack/Firmware/RP2040/hal_rp2040/driver.c <==
#include "pico/stdlib.h"
#include "hardware/i2c.h"
#include "hardware/gpio.h"
#include "hardware/irq.h"
#include "encoder.pio.h"
#include "../src/grbl.h"
#include "../src/config.h"
#include "../src/interface.h"
#include "../src/keypad.h"
#include "i2c_nb.h"
#include "driver.h"
#define LAST_STATE(state)  ((state) & 0b0011)
#define CURR_STATE(state)  (((state) & 0b1100) >> 2)
#define STATES_MASK (STATE_A_MASK | STATE_B_MASK | STATE_A_LAST_MASK | STATE_B_LAST_MASK);
#define SHIFT_KEY 0b1000010000

void hal_init (void)
{
    int offset;

    mpg_axis = &mpg.x;

    gpio_init(SWD_RESET);
    gpio_set_dir(SWD_RESET, GPIO_OUT);
    gpio_put(SWD_RESET, 0); // Halt MSP430 keypad controller

    i2c_nb_init();

    gpio_pull_up(KEYINTR_PIN);
    gpio_set_irq_enabled_with_callback(KEYINTR_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, true, gpio_int_handler);

    gpio_set_irq_enabled_with_callback(MPGMODE_SW_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, false, gpio_int_handler);
    gpio_pull_up(MPGMODE_SW_PIN);
    gpio_set_irq_enabled(MPGMODE_SW_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, true);

    gpio_set_irq_enabled_with_callback(JOG_RATE_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, false, gpio_int_handler);
    gpio_pull_up(JOG_RATE_PIN);
    gpio_set_irq_enabled(JOG_RATE_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, true);
    
    gpio_set_irq_enabled_with_callback(AXIS_TOGGLE_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, false, gpio_int_handler);
    gpio_pull_up(AXIS_TOGGLE_PIN);
    gpio_set_irq_enabled(AXIS_TOGGLE_PIN, GPIO_IRQ_EDGE_RISE | GPIO_IRQ_EDGE_FALL, true);

    gpio_init(KEYFWD_PIN);
    gpio_set_oeover(KEYFWD_PIN, GPIO_OVERRIDE_LOW); // > to OD // GPIO_OVERRIDE_INVERT does not work!
    gpio_set_dir(KEYFWD_PIN, GPIO_OUT);
    gpio_set_pulls(KEYFWD_PIN, false, false);
    gpio_put(KEYFWD_PIN, 0); // > to OD

    gpio_init(CYCLESTART_PIN);
    gpio_set_dir(CYCLESTART_PIN, GPIO_OUT);
    gpio_set_oeover(CYCLESTART_PIN, GPIO_OVERRIDE_LOW); // > to OD
    gpio_put(CYCLESTART_PIN, 0);

    gpio_init(FEEDHOLD_PIN);
    gpio_set_dir(FEEDHOLD_PIN, GPIO_OUT);
    gpio_set_oeover(FEEDHOLD_PIN, GPIO_OVERRIDE_LOW); // > to OD
    gpio_put(FEEDHOLD_PIN, 0); // > to OD

    gpio_init(MPG_MODE_PIN);

    enc_sm = pio_claim_unused_sm(pio0, true);
    uint pio_idx = pio_get_index(pio0);

    offset = pio_add_program(pio0, &encoder_program);
    encoder_program_init(pio0, enc_sm, offset, NAVIGATOR_A, NAVIGATOR_B, 250);
    hw_set_bits(&pio0->inte0, PIO_IRQ0_INTE_SM0_RXNEMPTY_BITS << enc_sm);
    encoder_program_start(pio0, enc_sm, gpio_get(NAVIGATOR_A), gpio_get(NAVIGATOR_B));

    irq_set_exclusive_handler(PIO0_IRQ_0, encoder_int_handler);
    irq_set_enabled(PIO0_IRQ_0, true);

    mpg_sm = pio_claim_unused_sm(pio1, true);
    offset = pio_add_program(pio1, &encoder_program);
    encoder_program_init(pio1, mpg_sm, offset, MPG_A, MPG_B, 250);
    hw_set_bits(&pio1->inte0, PIO_IRQ0_INTE_SM0_RXNEMPTY_BITS << mpg_sm);
    encoder_program_start(pio1, mpg_sm, gpio_get(MPG_A), gpio_get(MPG_B));

    irq_set_exclusive_handler(PIO1_IRQ_0, mpg_int_handler);
    irq_set_enabled(PIO1_IRQ_0, true);

 // Boot MSP430 keypad controller (the RP2040 does not support open drain outputs?)
    gpio_set_pulls(SWD_RESET, false, false);
    gpio_set_dir(SWD_RESET, GPIO_IN);
    delay(5); // Wait for keypad controller startup

 // Select a different key mapping than the default
 //   uint8_t map[] = {0, 3};
 //   i2c_nb_send_n(KEYPAD_I2CADDR, map, sizeof(map));

 // Add any additional key mappings to keypad controller
    for(offset = 0; offset < sizeof(kmap) / sizeof(keypad_key_t); offset++)
        i2c_nb_send_n(KEYPAD_I2CADDR, (uint8_t *)&kmap[offset], sizeof(keypad_key_t));
  }

void keypad_setFwd (bool on)
{
    gpio_set_oeover(KEYFWD_PIN, on ? GPIO_OVERRIDE_HIGH : GPIO_OVERRIDE_LOW);
}

void signal_setFeedHold (bool on)
{
    if(on)
        gpio_set_oeover(CYCLESTART_PIN, GPIO_OVERRIDE_LOW);
 
    gpio_set_oeover(FEEDHOLD_PIN, on ? GPIO_OVERRIDE_HIGH : GPIO_OVERRIDE_LOW);
}

void signal_setCycleStart (bool on)
{
    if(on)
        gpio_set_oeover(FEEDHOLD_PIN, GPIO_OVERRIDE_LOW);

    gpio_set_oeover(CYCLESTART_PIN, on ? GPIO_OVERRIDE_HIGH : GPIO_OVERRIDE_LOW);
}

void signal_setMPGMode (bool on)
{
    static bool initOk = false;

    if(!initOk) {
        initOk = true;
        gpio_set_dir(MPG_MODE_PIN, GPIO_OUT);
        gpio_set_pulls(MPG_MODE_PIN, false, false);
        gpio_set_oeover(MPG_MODE_PIN, GPIO_OVERRIDE_LOW); // > to OD
        gpio_put(MPG_MODE_PIN, 0);
    }

    // If last mode change request was not honoured then output a 1us pulse to reset
    // grbl interrupt that may have become out of sync.
    if(gpio_get(MPG_MODE_PIN) == on) {
        gpio_set_oeover(MPG_MODE_PIN, on ? GPIO_OVERRIDE_HIGH : GPIO_OVERRIDE_LOW);
        sleep_us(1);
    }
}

static void keyclick_int_handler (uint gpio, uint32_t events)
{
    if(events & (GPIO_IRQ_EDGE_FALL|GPIO_IRQ_EDGE_RISE)) {
        if(gpio_get(KEYINTR_PIN) == 0) {
            keyDown = true;
            i2c_getSWKeycode(keypad_enqueue_keycode);
        } else {
            if(keypad_release()) {
                keypad_setFwd(false);
                if(!keypad_forward_queue_is_empty()) {
                    sleep_us(50);
                    keypad_setFwd(true);
                }
            } else if(interface.on_keyclick2)
                interface.on_keyclick2(false, 0); // fire key up event
            keyDown = false;
        }
    }
}
