==> terjeio/GRBL_MPG_DRO_BoosterPack/Firmware/TM4C123/driver.c <==
#include "src/interface.h"
#include "src/keypad.h"
#include "driver.h"
#include "i2c.h"
#define MAX_POS (900000000)
#define MID_POS (MAX_POS / 2)

void hal_init (void)
{
    i2c_nb_init();

    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOC);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOF);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_QEI0);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_QEI1);

    // Unlock PF0 (NMI)

    HWREG(GPIO_PORTF_BASE + GPIO_O_LOCK) = GPIO_LOCK_KEY;
    HWREG(GPIO_PORTF_BASE + GPIO_O_CR) |= 0x01;
    HWREG(GPIO_PORTF_BASE + GPIO_O_AFSEL) |= 0x400;
    HWREG(GPIO_PORTF_BASE + GPIO_O_DEN) |= 0x01;
    HWREG(GPIO_PORTF_BASE + GPIO_O_LOCK) = 0;

    //

    GPIOPinConfigure(GPIO_PF0_PHA0);
    GPIOPinConfigure(GPIO_PF1_PHB0);
    GPIOPinTypeQEI(GPIO_PORTF_BASE, GPIO_PIN_0|GPIO_PIN_1);

    QEIDisable(QEI0_BASE);
    QEIIntDisable(QEI0_BASE, QEI_INTERROR|QEI_INTDIR|QEI_INTTIMER|QEI_INTINDEX);
    QEIConfigure(QEI0_BASE, (QEI_CONFIG_CAPTURE_A_B|QEI_CONFIG_NO_RESET|QEI_CONFIG_QUADRATURE|QEI_CONFIG_SWAP), MAX_POS);
    QEIVelocityConfigure(QEI0_BASE, QEI_VELDIV_1, SysCtlClockGet() / 100);
    QEIFilterEnable(QEI0_BASE);
    QEIEnable(QEI0_BASE);
    QEIVelocityEnable(QEI0_BASE);
    QEIIntRegister(QEI0_BASE, MPG_X_IntHandler);
    QEIIntEnable(QEI0_BASE, QEI_INTTIMER);


    GPIOPinConfigure(GPIO_PC5_PHA1);
    GPIOPinConfigure(GPIO_PC6_PHB1);
    GPIOPinTypeQEI(GPIO_PORTC_BASE, GPIO_PIN_5|GPIO_PIN_6);

    QEIDisable(QEI1_BASE);
    QEIIntDisable(QEI1_BASE, QEI_INTERROR|QEI_INTDIR|QEI_INTTIMER|QEI_INTINDEX);
    QEIConfigure(QEI1_BASE, (QEI_CONFIG_CAPTURE_A_B|QEI_CONFIG_NO_RESET|QEI_CONFIG_QUADRATURE|QEI_CONFIG_NO_SWAP), MAX_POS);
    QEIVelocityConfigure(QEI1_BASE, QEI_VELDIV_1, SysCtlClockGet() / 100);
    QEIFilterEnable(QEI1_BASE);
    QEIEnable(QEI1_BASE);
    QEIVelocityEnable(QEI1_BASE);
    QEIIntRegister(QEI1_BASE, MPG_Z_IntHandler);
    QEIIntEnable(QEI1_BASE, QEI_INTTIMER);

    mpg_reset();


    GPIOPinTypeGPIOInput(KEYINTR_PORT, KEYINTR_PIN);
    GPIOPadConfigSet(KEYINTR_PORT, KEYINTR_PIN, GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD_WPU);

    GPIOIntRegister(KEYINTR_PORT, keyclick_int_handler);
    GPIOIntTypeSet(KEYINTR_PORT, KEYINTR_PIN, GPIO_BOTH_EDGES);
    GPIOIntEnable(KEYINTR_PORT, KEYINTR_PIN);


    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOA);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOB);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOC);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOE);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOF);

    GPIOPinTypeGPIOInput(MPG_MODE_PORT, MPG_MODE_PIN);

    GPIOPinTypeGPIOOutput(GPIO1_PORT, GPIO1_PIN);
    GPIOPadConfigSet(GPIO1_PORT, GPIO1_PIN, GPIO_STRENGTH_8MA, GPIO_PIN_TYPE_OD);
    GPIOPinWrite(GPIO1_PORT, GPIO1_PIN, GPIO1_PIN);

    GPIOPinTypeGPIOInput(SPINDLEDIR_PORT, SPINDLEDIR_PIN);
    GPIOPadConfigSet(SPINDLEDIR_PORT, SPINDLEDIR_PIN, GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD_WPU);

    GPIOPinWrite(SIGNALS_PORT, SIGNAL_CYCLESTART_PIN|SIGNAL_FEEDHOLD_PIN, 0);
    GPIOPinTypeGPIOOutput(SIGNALS_PORT, SIGNAL_CYCLESTART_PIN|SIGNAL_FEEDHOLD_PIN);
    GPIOPadConfigSet(SIGNALS_PORT, SIGNAL_CYCLESTART_PIN|SIGNAL_FEEDHOLD_PIN, GPIO_STRENGTH_8MA, GPIO_PIN_TYPE_STD);


    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOC);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);

    // Unlock PD7 (NMI)

    HWREG(GPIO_PORTD_BASE + GPIO_O_LOCK) = GPIO_LOCK_KEY;
    HWREG(GPIO_PORTD_BASE + GPIO_O_CR)|= GPIO_PIN_7;
//    HWREG(GPIO_PORTD_BASE + GPIO_O_AFSEL) |= 0x400;
//    HWREG(GPIO_PORTD_BASE + GPIO_O_DEN) |= GPIO_PIN_7;
    HWREG(GPIO_PORTD_BASE + GPIO_O_LOCK) = 0;

    GPIOPinTypeGPIOInput(NAVIGATOR_PORT, NAVIGATOR_A|NAVIGATOR_B);
    GPIOPadConfigSet(NAVIGATOR_PORT, NAVIGATOR_A|NAVIGATOR_B, GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD_WPU);

    GPIOIntRegister(NAVIGATOR_PORT, navigator_int_handler);
    GPIOIntTypeSet(NAVIGATOR_PORT, NAVIGATOR_A|NAVIGATOR_B, GPIO_BOTH_EDGES);
    GPIOIntEnable(NAVIGATOR_PORT, NAVIGATOR_A|NAVIGATOR_B);

    GPIOPinTypeGPIOInput(NAVIGATOR_SW_PORT, NAVIGATOR_SW_PIN);
//    GPIOIntRegister(NAVIGATOR_SW_PORT, navigator_sw_int_handler); // entry handler in keypad.c
    GPIOPadConfigSet(NAVIGATOR_SW_PORT, NAVIGATOR_SW_PIN, GPIO_STRENGTH_2MA, GPIO_PIN_TYPE_STD_WPU);
    GPIOIntTypeSet(NAVIGATOR_SW_PORT, NAVIGATOR_SW_PIN, GPIO_BOTH_EDGES);
    GPIOIntEnable(NAVIGATOR_SW_PORT, NAVIGATOR_SW_PIN); // Enable Pin Change Interrupt

    SysCtlPeripheralEnable(DEBOUNCE_TIMER_PERIPH);
    SysCtlDelay(26); // wait a bit for peripherals to wake up
    IntPrioritySet(DEBOUNCE_TIMER_INT, 0x40); // lower priority than for Timer2 (which resets the step-dir signal)
    TimerConfigure(DEBOUNCE_TIMER_BASE, TIMER_CFG_SPLIT_PAIR|TIMER_CFG_A_ONE_SHOT);
    TimerControlStall(DEBOUNCE_TIMER_BASE, TIMER_A, true); //timer2 will stall in debug mode
    TimerIntRegister(DEBOUNCE_TIMER_BASE, TIMER_A, debounce_int_handler);
    TimerIntClear(DEBOUNCE_TIMER_BASE, 0xFFFF);
    IntPendClear(DEBOUNCE_TIMER_INT);
    TimerPrescaleSet(DEBOUNCE_TIMER_BASE, TIMER_A, 79); // configure for 1us per count
    TimerLoadSet(DEBOUNCE_TIMER_BASE, TIMER_A, 32000);  // and for a total of 32ms
    TimerIntEnable(DEBOUNCE_TIMER_BASE, TIMER_TIMA_TIMEOUT);

    nav.xPos = 320 / 2;
 }

void keypad_setFwd (bool on)
{
    GPIOPinWrite(GPIO_PORTD_BASE, GPIO_PIN_2, on ? 0 : GPIO_PIN_2);
}

void signal_setFeedHold (bool on)
{
    if(on) {
        GPIOPinWrite(SIGNALS_PORT, SIGNAL_CYCLESTART_PIN, 0);
        GPIOPinWrite(SIGNALS_PORT, SIGNAL_FEEDHOLD_PIN, SIGNAL_FEEDHOLD_PIN);
    } else
        GPIOPinWrite(SIGNALS_PORT, SIGNAL_FEEDHOLD_PIN, 0);
}

void signal_setCycleStart (bool on)
{
    if(on) {
        GPIOPinWrite(SIGNALS_PORT, SIGNAL_FEEDHOLD_PIN, 0);
        GPIOPinWrite(SIGNALS_PORT, SIGNAL_CYCLESTART_PIN, SIGNAL_CYCLESTART_PIN);
    } else
        GPIOPinWrite(SIGNALS_PORT, SIGNAL_CYCLESTART_PIN, 0);
}

void signal_setMPGMode (bool on)
{
    static bool initOk = false;

    if(!initOk) {
        initOk = true;
        GPIOPinTypeGPIOOutput(MPG_MODE_PORT, MPG_MODE_PIN);
        GPIOPadConfigSet(MPG_MODE_PORT, MPG_MODE_PIN, GPIO_STRENGTH_8MA, GPIO_PIN_TYPE_OD);
    }

    // If last mode change request was not honoured then output a 1us pulse to reset
    // grbl interrupt that may have become out of sync.
    if((GPIOPinRead(MPG_MODE_PORT, MPG_MODE_PIN) == 0) == on) {
        GPIOPinWrite(MPG_MODE_PORT, MPG_MODE_PIN, on ? MPG_MODE_PIN : 0);
        _delay_cycles(80); // 1us on a 80MHz MCU
    }

    GPIOPinWrite(MPG_MODE_PORT, MPG_MODE_PIN, on ? 0 : MPG_MODE_PIN);
}

static void keyclick_int_handler (void)
{
    uint32_t iflags = GPIOIntStatus(KEYINTR_PORT, KEYINTR_PIN);

    if(iflags & KEYINTR_PIN) {
        if(GPIOPinRead(KEYINTR_PORT, KEYINTR_PIN) == 0) {
            keyDown = true;
            i2c_getSWKeycode(keypad_enqueue_keycode);
        } else {
            if(keypad_release()) {
                keypad_setFwd(false);
                if(!keypad_forward_queue_is_empty()) {
                    // delay...
                    keypad_setFwd(true);
                }
            } else if(interface.on_keyclick2)
                interface.on_keyclick2(false, 0); // fire key up event
            keyDown = false;
        }
    } else
        navigator_sw_int_handler();

    GPIOIntClear(KEYINTR_PORT, iflags);
}
